// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InfoBubble > is visible 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-segment visible"
  >
    <header>
      <div
        class="info-bubble-label info-bubble-label-editable"
      >
        Streetcar
        <svg
          class="info-bubble-label-editable-icon"
          data-icon="lock"
          data-icon-source="test"
        />
      </div>
      <button
        class="btn info-bubble-remove"
        tabindex="-1"
        title="Remove segment"
        type="button"
      >
        <svg
          class="remove-icon"
          data-icon="trash"
          data-icon-source="test"
        />
        Remove
      </button>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="info-bubble-control-row"
      >
        <div
          class="variants"
        >
          <button
            class="btn variant-selected"
            data-testid="Inbound"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-direction-inbound"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Outbound"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-direction-outbound"
              />
            </svg>
          </button>
          <hr />
          <button
            class="btn variant-selected"
            data-testid="Asphalt"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              style="fill: #292a29;"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-asphalt"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Red lane"
            type="button"
          >
            <svg
              class="icon"
              style="fill: #9b1f22;"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-asphalt"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Grass"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-grass"
              />
            </svg>
          </button>
        </div>
        <div
          class="non-variant"
        >
          <div
            class="up-down-input"
          >
            <button
              class="btn up-down-input-decrement"
              data-testid="down"
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="minus"
                data-icon-source="test"
              />
            </button>
            <input
              class="up-down-input-element"
              title="Change width of the segment"
              type="text"
              value="3 m"
            />
            <button
              class="btn up-down-input-increment"
              data-testid="up"
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="plus"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="info-bubble-control-group"
      >
        <div
          class="info-bubble-control-row"
        >
          <div
            class="info-bubble-control-label"
          >
            Elevation
          </div>
          <div
            class="variants"
          >
            <button
              class="btn"
              disabled=""
              type="button"
            >
              <svg
                class="icon"
                xmlns="http://www.w3.org/1999/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <use
                  href="#icon-elevation-higher"
                />
              </svg>
              <svg
                data-icon="lock"
                data-icon-source="test"
              />
            </button>
            <button
              class="btn"
              disabled=""
              type="button"
            >
              <svg
                class="icon"
                xmlns="http://www.w3.org/1999/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <use
                  href="#icon-elevation-lower"
                />
              </svg>
              <svg
                data-icon="lock"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="info-bubble-triangle"
    />
  </div>
</DocumentFragment>
`;

exports[`InfoBubble > renders 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-segment"
  >
    <header>
      <div
        class="info-bubble-label info-bubble-label-editable"
      >
        Streetcar
        <svg
          class="info-bubble-label-editable-icon"
          data-icon="lock"
          data-icon-source="test"
        />
      </div>
      <button
        class="btn info-bubble-remove"
        tabindex="-1"
        title="Remove segment"
        type="button"
      >
        <svg
          class="remove-icon"
          data-icon="trash"
          data-icon-source="test"
        />
        Remove
      </button>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="info-bubble-control-row"
      >
        <div
          class="variants"
        >
          <button
            class="btn variant-selected"
            data-testid="Inbound"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-direction-inbound"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Outbound"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-direction-outbound"
              />
            </svg>
          </button>
          <hr />
          <button
            class="btn variant-selected"
            data-testid="Asphalt"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              style="fill: #292a29;"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-asphalt"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Red lane"
            type="button"
          >
            <svg
              class="icon"
              style="fill: #9b1f22;"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-asphalt"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Grass"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-grass"
              />
            </svg>
          </button>
        </div>
        <div
          class="non-variant"
        >
          <div
            class="up-down-input"
          >
            <button
              class="btn up-down-input-decrement"
              data-testid="down"
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="minus"
                data-icon-source="test"
              />
            </button>
            <input
              class="up-down-input-element"
              title="Change width of the segment"
              type="text"
              value="3 m"
            />
            <button
              class="btn up-down-input-increment"
              data-testid="up"
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="plus"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="info-bubble-control-group"
      >
        <div
          class="info-bubble-control-row"
        >
          <div
            class="info-bubble-control-label"
          >
            Elevation
          </div>
          <div
            class="variants"
          >
            <button
              class="btn"
              disabled=""
              type="button"
            >
              <svg
                class="icon"
                xmlns="http://www.w3.org/1999/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <use
                  href="#icon-elevation-higher"
                />
              </svg>
              <svg
                data-icon="lock"
                data-icon-source="test"
              />
            </button>
            <button
              class="btn"
              disabled=""
              type="button"
            >
              <svg
                class="icon"
                xmlns="http://www.w3.org/1999/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <use
                  href="#icon-elevation-lower"
                />
              </svg>
              <svg
                data-icon="lock"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="info-bubble-triangle"
    />
  </div>
</DocumentFragment>
`;

exports[`InfoBubble > shows building left info bubble 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-building"
  >
    <header>
      <div
        class="info-bubble-label"
      >
        Grass
      </div>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="info-bubble-control-row"
      >
        <div
          class="variants"
        >
          <button
            class="btn"
            data-testid="Waterfront"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-waterfront"
              />
            </svg>
          </button>
          <button
            class="btn variant-selected"
            data-testid="Grass"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-grass"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Empty lot"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-fence"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Parking lot"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-car"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Home"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-residential"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Narrow building"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-building-thin"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Wide building"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-building-wide"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Arcade building"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-building-arcade"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Compound wall"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-compound-wall"
              />
            </svg>
            <svg
              data-icon="lock"
              data-icon-source="test"
            />
          </button>
        </div>
        <div
          class="non-variant building-height"
        >
          <div
            class="up-down-input"
          >
            <button
              class="btn up-down-input-decrement"
              data-testid="down"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="minus"
                data-icon-source="test"
              />
            </button>
            <input
              class="up-down-input-element"
              disabled=""
              title="Change the number of floors"
              type="text"
              value=""
            />
            <button
              class="btn up-down-input-increment"
              data-testid="up"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="plus"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="info-bubble-triangle"
    />
  </div>
</DocumentFragment>
`;

exports[`InfoBubble > shows building right info bubble 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-building"
  >
    <header>
      <div
        class="info-bubble-label"
      >
        Grass
      </div>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="info-bubble-control-row"
      >
        <div
          class="variants"
        >
          <button
            class="btn"
            data-testid="Waterfront"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-waterfront"
              />
            </svg>
          </button>
          <button
            class="btn variant-selected"
            data-testid="Grass"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-grass"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Empty lot"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-fence"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Parking lot"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-car"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Home"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-residential"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Narrow building"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-building-thin"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Wide building"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-building-wide"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Arcade building"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-building-arcade"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Compound wall"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-compound-wall"
              />
            </svg>
            <svg
              data-icon="lock"
              data-icon-source="test"
            />
          </button>
        </div>
        <div
          class="non-variant building-height"
        >
          <div
            class="up-down-input"
          >
            <button
              class="btn up-down-input-decrement"
              data-testid="down"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="minus"
                data-icon-source="test"
              />
            </button>
            <input
              class="up-down-input-element"
              disabled=""
              title="Change the number of floors"
              type="text"
              value=""
            />
            <button
              class="btn up-down-input-increment"
              data-testid="up"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="plus"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="info-bubble-triangle"
    />
  </div>
</DocumentFragment>
`;

exports[`InfoBubble > shows description 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-segment show-description"
  >
    <header>
      <div
        class="info-bubble-label info-bubble-label-editable"
      >
        Streetcar
        <svg
          class="info-bubble-label-editable-icon"
          data-icon="lock"
          data-icon-source="test"
        />
      </div>
      <button
        class="btn info-bubble-remove"
        tabindex="-1"
        title="Remove segment"
        type="button"
      >
        <svg
          class="remove-icon"
          data-icon="trash"
          data-icon-source="test"
        />
        Remove
      </button>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="info-bubble-control-row"
      >
        <div
          class="variants"
        >
          <button
            class="btn variant-selected"
            data-testid="Inbound"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-direction-inbound"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Outbound"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-direction-outbound"
              />
            </svg>
          </button>
          <hr />
          <button
            class="btn variant-selected"
            data-testid="Asphalt"
            disabled=""
            type="button"
          >
            <svg
              class="icon"
              style="fill: #292a29;"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-asphalt"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Red lane"
            type="button"
          >
            <svg
              class="icon"
              style="fill: #9b1f22;"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-asphalt"
              />
            </svg>
          </button>
          <button
            class="btn"
            data-testid="Grass"
            type="button"
          >
            <svg
              class="icon"
              xmlns="http://www.w3.org/1999/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                href="#icon-grass"
              />
            </svg>
          </button>
        </div>
        <div
          class="non-variant"
        >
          <div
            class="up-down-input"
          >
            <button
              class="btn up-down-input-decrement"
              data-testid="down"
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="minus"
                data-icon-source="test"
              />
            </button>
            <input
              class="up-down-input-element"
              title="Change width of the segment"
              type="text"
              value="3 m"
            />
            <button
              class="btn up-down-input-increment"
              data-testid="up"
              tabindex="-1"
              type="button"
            >
              <svg
                data-icon="plus"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="info-bubble-control-group"
      >
        <div
          class="info-bubble-control-row"
        >
          <div
            class="info-bubble-control-label"
          >
            Elevation
          </div>
          <div
            class="variants"
          >
            <button
              class="btn"
              disabled=""
              type="button"
            >
              <svg
                class="icon"
                xmlns="http://www.w3.org/1999/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <use
                  href="#icon-elevation-higher"
                />
              </svg>
              <svg
                data-icon="lock"
                data-icon-source="test"
              />
            </button>
            <button
              class="btn"
              disabled=""
              type="button"
            >
              <svg
                class="icon"
                xmlns="http://www.w3.org/1999/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              >
                <use
                  href="#icon-elevation-lower"
                />
              </svg>
              <svg
                data-icon="lock"
                data-icon-source="test"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="info-bubble-triangle"
    />
  </div>
</DocumentFragment>
`;
